working on basic form for signup page.

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,14 @@
-<p>
-  signup works!
-</p>
+<section>
+  <br>
+  <form fxLayout="column" fxLayoutAlign="center center">
+    <mat-form-field appearance="outline">
+      <mat-label>Your Email</mat-label>
+      <input type="email" matInput placeholder="ben@gmail.com">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Your Password</mat-label>
+      <input type="password" matInput placeholder="Password123">
+    </mat-form-field>
+    <button mat-raised-button color="accent">Submit</button>
+  </form>
+</section>
