--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,14 +1,41 @@
 <section>
-  <br>
-  <form fxLayout="column" fxLayoutAlign="center center">
+  <br />
+  <form
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    #f="ngForm"
+    (ngSubmit)="onSubmit(f)"
+  >
     <mat-form-field appearance="outline">
       <mat-label>Your Email</mat-label>
-      <input type="email" matInput placeholder="ben@gmail.com">
+      <input
+        type="email"
+        matInput
+        placeholder="ben@gmail.com"
+        ngModel
+        name="email"
+        email
+        required
+        #emailInput="ngModel"
+      />
+      <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty.</mat-error>
+      <mat-error *ngIf="!emailInput.hasError('required')" >E-mail is invalid.</mat-error>
     </mat-form-field>
-    <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline" hintLabel="Has to be at least 6 characters long">
       <mat-label>Your Password</mat-label>
-      <input type="password" matInput placeholder="Password123">
+      <input
+        type="password"
+        matInput
+        placeholder="Password123"
+        ngModel
+        name="password"
+        required
+        minlength="6"
+        #pwInput="ngModel"
+      />
+      <mat-error>Has to be 6 characters</mat-error>
+      <mat-hint align="end"> {{ pwInput.value?.length }} / 6</mat-hint>
     </mat-form-field>
-    <button mat-raised-button color="accent">Submit</button>
+    <button type="submit" mat-raised-button color="accent">Submit</button>
   </form>
 </section>
