--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,44 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
-    <p>Hello :3</p>
+    <mat-nav-list>
+      <a mat-list-item [routerLink]="['/signup']" (click)="sidenav.close()">
+        <mat-icon>app_registration</mat-icon>
+        <span class="nav-text">Signup</span>
+      </a>
+      <a mat-list-item [routerLink]="['/login']" (click)="sidenav.close()">
+        <mat-icon>login</mat-icon>
+        <span class="nav-text">Login</span>
+      </a>
+      <a mat-list-item [routerLink]="['/plant']" (click)="sidenav.close()">
+        <mat-icon>yard</mat-icon>
+        <span class="nav-text">Plants</span>
+      </a>
+      <mat-list-item>
+        <button mat-icon-button (click)="sidenav.close()">
+          <mat-icon>logout</mat-icon>
+          <span class="nav-item">Logout</span>
+        </button>
+      </mat-list-item>
+    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-        <div><button mat-icon-button>
-            <mat-icon>menu</mat-icon>
-        </button></div>
-        <div>LOGO</div>
-        <a [routerLink]="['/signup']">Signup</a>
-        <a [routerLink]="['/login']">Login</a>
-        <a [routerLink]="['/plant']">Plants</a>
+      <div fxHide.gt-xs>
+        <button mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </div>
+      <div>
+        <a [routerLink]="['/']">Plant Planner</a>
+      </div>
+      <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
+        <ul fxLayout fxLayoutGap="10px" class="nav-items">
+          <li><a [routerLink]="['/signup']">Signup</a></li>
+          <li><a [routerLink]="['/login']">Login</a></li>
+          <li><a [routerLink]="['/plant']">Plants</a></li>
+          <li><a>Logout</a></li>
+        </ul>
+      </div>
     </mat-toolbar>
     <main>
       <router-outlet></router-outlet>
