--- a/src/app/dashboard/new-plant/new-plant.component.html
+++ b/src/app/dashboard/new-plant/new-plant.component.html
@@ -22,6 +22,16 @@
           />
           <mat-error *ngIf="npInput.hasError('required')">Field must not be empty.</mat-error>
         </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Day your plant grew?</mat-label>
+          <input
+          matInput
+          required
+          placeholder="Pick a date!"
+          [matDatepicker]="datePicker">
+          <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+          <mat-datepicker #datePicker></mat-datepicker>
+        </mat-form-field>
       </form>
     </mat-card-content>
     <mat-card-actions fxLayoutAlign="center">
