--- a/src/app/dashboard/past-plants/past-plants.component.html
+++ b/src/app/dashboard/past-plants/past-plants.component.html
@@ -1,3 +1,11 @@
-<p>
-  past-plants works!
-</p>
+<section class="past-plant" fxLayout fxLayoutAlign="center">
+  <mat-card fxFlex.xs="100%" fxFlex="400px">
+    <mat-card-title class="plantTitle" fxLayoutAlign="center">
+      How are your plants doing?
+    </mat-card-title>
+    <mat-card-content>
+    </mat-card-content>
+    <mat-card-actions fxLayoutAlign="center">
+    </mat-card-actions>
+  </mat-card>
+</section>
