--- a/src/app/dashboard/past-runs/past-runs.component.html
+++ b/src/app/dashboard/past-runs/past-runs.component.html
@@ -1,4 +1,4 @@
-<section class="past-plant" fxLayout fxLayoutAlign="center">
+<section class="past-run" fxLayout fxLayoutAlign="center">
   <mat-card fxFlex.xs="100%" fxFlex="400px">
     <mat-card-title class="plantTitle" fxLayoutAlign="center">
       How are your plants doing?
