--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,11 +2,10 @@
   <section>
     <h1>Welcome!</h1>
     <p>
-      Have you ever wanted to have the ability to track your plants health, and
-      keep on yop of your plants?
+      Have you ever wanted to have the ability to keep a record of all the runs you have done?
     </p>
     <p>
-      Well, Plant Planner is the site for you, get started now and sign up today!
+      Well, with Running Records now you can, get started now and sign up today!
     </p>
     <a [routerLink]="['/login']">
       <button mat-raised-button color="accent">Login</button>
@@ -19,8 +18,8 @@
   <section>
     <h1>Features</h1>
     <p>
-      In this application you will have the ability to write personal entires
-      that you can use to keep track of your plants.
+      In this application you will have the ability to keep track of the runs you have done
+      and give mood update once it's done.
     </p>
   </section>
   <section>
