--- a/src/app/dashboard/new-run/new-run.component.html
+++ b/src/app/dashboard/new-run/new-run.component.html
@@ -5,50 +5,71 @@
     </mat-card-title>
     <mat-card-content>
       <form
-      fxLayout="column"
-      fxLayoutAlign="center center"
-      fxLayoutGap="5px"
-      #fp="ngForm">
+        fxLayout="column"
+        fxLayoutAlign="center center"
+        fxLayoutGap="17px"
+        #fp="ngForm"
+      >
         <mat-form-field appearance="outline">
           <mat-label>Day of your run?</mat-label>
           <input
-          matInput
-          required
-          ngModel
-          placeholder="Pick a date!"
-          [matDatepicker]="datePicker">
-          <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+            matInput
+            required
+            ngModel
+            placeholder="Pick a date!"
+            name="date"
+            #dPick="ngModel"
+            [matDatepicker]="datePicker"
+          />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="datePicker"
+          ></mat-datepicker-toggle>
           <mat-datepicker #datePicker></mat-datepicker>
+          <mat-error *ngIf="dPick.hasError('required')"
+            >Field must not be empty.</mat-error
+          >
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Run Distance? (KM)</mat-label>
           <input
+            type="number"
             matInput
-            placeholder="Rose"
+            placeholder="10KM"
             ngModel
             required
-            name="pName"
+            name="distance"
+            #rDis="ngModel"
           />
+          <mat-error *ngIf="rDis.hasError('required')">
+            Field must not be empty and be a number.
+          </mat-error>
         </mat-form-field>
-        <mat-form-field appearance="outline" >
+        <mat-form-field appearance="outline">
           <mat-label>How do you feel?</mat-label>
-          <mat-select required>
+          <mat-select required ngModel name="dropdown" #mDrop="ngModel">
             <mat-option value="good">Good</mat-option>
             <mat-option value="ok">Alright</mat-option>
             <mat-option value="rough">Rough</mat-option>
           </mat-select>
+          <mat-error *ngIf="mDrop.hasError('required')">
+            Field must not be empty.
+          </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <mat-label>Progress Description</mat-label>
-          <textarea
+          <mat-label>Calories you burned?</mat-label>
+          <input
+            type="number"
             matInput
-            placeholder="How is your plant doing?"
+            placeholder="500"
             ngModel
-            name="message"
             required
-            #descInput="ngModel"
-          ></textarea>
-          <mat-error *ngIf="descInput.hasError('required')">Field Must not be empty.</mat-error>
+            name="calories"
+            #cBurn="ngModel"
+          />
+          <mat-error *ngIf="cBurn.hasError('required')">
+          Field must not be empty and be a number.
+          </mat-error>
         </mat-form-field>
       </form>
     </mat-card-content>
@@ -57,4 +78,3 @@
     </mat-card-actions>
   </mat-card>
 </section>
-
