--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
     <mat-nav-list>
-      <a mat-list-item [routerLink]="['/run']" (click)="sidenav.close()">
+      <a mat-list-item [routerLink]="['/run']" (click)="sidenav.close()" *ngIf="isAuth">
         <mat-icon>yard</mat-icon>
         <span class="nav-text">Runs</span>
       </a>
       <mat-list-item>
-        <button mat-icon-button (click)="sidenav.close()">
+        <button mat-icon-button (click)="sidenav.close()" *ngIf="isAuth">
           <mat-icon>logout</mat-icon>
           <span class="nav-item">Logout</span>
         </button>
@@ -25,8 +25,8 @@
       </div>
       <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
         <ul fxLayout fxLayoutGap="10px" class="nav-items">
-          <li><a [routerLink]="['/run']">Runs</a></li>
-          <li><a>Logout</a></li>
+          <li *ngIf="isAuth"><a [routerLink]="['/run']">Runs</a></li>
+          <li *ngIf="isAuth"><a>Logout</a></li>
         </ul>
       </div>
     </mat-toolbar>
