added a table to the application

--- a/src/app/dashboard/new-run/new-run.component.html
+++ b/src/app/dashboard/new-run/new-run.component.html
@@ -71,7 +71,7 @@
       </form>
     </mat-card-content>
     <mat-card-actions fxLayoutAlign="center">
-      <button type="submit" [disabled]="fp.invalid" (click)="fp.reset() " mat-button>Submit</button>
+      <button type="submit" [disabled]="fp.invalid" (click)="fp.reset();" mat-button>Submit</button>
     </mat-card-actions>
   </mat-card>
 </section>
