--- a/src/app/dashboard/runs/runs.component.html
+++ b/src/app/dashboard/runs/runs.component.html
@@ -1,8 +1,10 @@
-<mat-tab-group>
+<mat-tab-group *ngIf="!ongoingRun">
   <mat-tab label="New Run"> 
-    <app-new-run></app-new-run>
+    <app-new-run (runStart)="ongoingRun = true"></app-new-run>
   </mat-tab>
   <mat-tab label="Run Diary"> 
     <app-past-runs></app-past-runs>
   </mat-tab>
 </mat-tab-group>
+<app-current-run *ngIf="ongoingRun"></app-current-run>
+
