made some progress on the timer

--- a/src/app/dashboard/runs/runs.component.html
+++ b/src/app/dashboard/runs/runs.component.html
@@ -6,5 +6,5 @@
     <app-past-runs></app-past-runs>
   </mat-tab>
 </mat-tab-group>
-<app-current-run *ngIf="ongoingRun"></app-current-run>
+<app-current-run *ngIf="ongoingRun" (runExit)="ongoingRun  = false"></app-current-run>
 
