--- a/src/app/dashboard/past-runs/past-runs.component.html
+++ b/src/app/dashboard/past-runs/past-runs.component.html
@@ -1,11 +1,24 @@
-<section class="past-run" fxLayout fxLayoutAlign="center">
-  <mat-card fxFlex.xs="100%" fxFlex="400px">
-    <mat-card-title class="plantTitle" fxLayoutAlign="center">
-      How are your plants doing?
-    </mat-card-title>
-    <mat-card-content>
-    </mat-card-content>
-    <mat-card-actions fxLayoutAlign="center">
-    </mat-card-actions>
-  </mat-card>
-</section>
+<table mat-table [dataSource]="dataSource">
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <td mat-cell *matCellDef="let element">{{ element.date | date }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Run Distance</th>
+    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="minutes">
+    <th mat-header-cell *matHeaderCellDef> Run Time (Minutes)</th>
+    <td mat-cell *matCellDef="let element">{{ element.runMinutes }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="seconds">
+    <th mat-header-cell *matHeaderCellDef> Run Time (Seconds)</th>
+    <td mat-cell *matCellDef="let element">{{ element.runSeconds }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
