--- a/src/app/dashboard/past-runs/past-runs.component.html
+++ b/src/app/dashboard/past-runs/past-runs.component.html
@@ -1,16 +1,16 @@
-<table mat-table [dataSource]="dataSource">
+<table mat-table [dataSource]="dataSource" matSort>
   <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
     <td mat-cell *matCellDef="let element">{{ element.date | date }}</td>
   </ng-container>
 
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Run Distance</th>
+    <th mat-header-cell *matHeaderCellDef  mat-sort-header>Run Distance</th>
     <td mat-cell *matCellDef="let element">{{ element.name }}</td>
   </ng-container>
 
   <ng-container matColumnDef="minutes">
-    <th mat-header-cell *matHeaderCellDef> Run Time (Minutes)</th>
+    <th mat-header-cell *matHeaderCellDef  mat-sort-header> Run Time (Minutes)</th>
     <td mat-cell *matCellDef="let element">{{ element.runMinutes }} </td>
   </ng-container>
 
@@ -22,3 +22,8 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<mat-paginator  [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of runs you want to see">
+  </mat-paginator>
