--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 html,
 body {
   height: 100%;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 body {
   margin: 0;
