--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
   <mat-sidenav #sidenav role="navigation">
     <mat-nav-list>
       <a mat-list-item [routerLink]="['/run']" (click)="sidenav.close()" *ngIf="isAuth">
-        <mat-icon>yard</mat-icon>
+        <mat-icon>directions_run</mat-icon>
         <span class="nav-text">Runs</span>
       </a>
       <mat-list-item>
         <button mat-icon-button (click)="onLogoutSideNav()" (click)="sidenav.close()"  *ngIf="isAuth">
-          <mat-icon>logout</mat-icon>
-          <span class="nav-item">Logout</span>
+          <mat-icon>eject</mat-icon>
+          <span class="nav-text">Logout</span>
         </button>
       </mat-list-item>
     </mat-nav-list>
