--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -19,10 +19,17 @@
         required
         #emailInput="ngModel"
       />
-      <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty.</mat-error>
-      <mat-error *ngIf="!emailInput.hasError('required')" >E-mail is invalid.</mat-error>
+      <mat-error *ngIf="emailInput.hasError('required')"
+        >Field must not be empty.</mat-error
+      >
+      <mat-error *ngIf="!emailInput.hasError('required')"
+        >E-mail is invalid.</mat-error
+      >
     </mat-form-field>
-    <mat-form-field appearance="outline" hintLabel="Has to be at least 6 characters long">
+    <mat-form-field
+      appearance="outline"
+      hintLabel="Has to be at least 6 characters long"
+    >
       <mat-label>Your Password</mat-label>
       <input
         type="password"
@@ -37,7 +44,10 @@
       <mat-error>Has to be 6 characters</mat-error>
       <mat-hint align="end"> {{ pwInput.value?.length }} / 6</mat-hint>
     </mat-form-field>
-    <mat-form-field appearance="outline" hintLabel="Has to be at least 4 characters long">
+    <mat-form-field
+      appearance="outline"
+      hintLabel="Has to be at least 4 characters long"
+    >
       <mat-label>Your Username</mat-label>
       <input
         matInput
@@ -51,6 +61,15 @@
       <mat-error>Has to be 4 characters</mat-error>
       <mat-hint align="end"> {{ unInput.value?.length }} / 4</mat-hint>
     </mat-form-field>
-    <button type="submit" mat-raised-button color="accent" [disabled]="f.invalid">Submit</button>
+    <button
+      *ngIf="!isLoading"
+      type="submit"
+      mat-raised-button
+      color="accent"
+      [disabled]="f.invalid"
+    >
+      Submit
+    </button>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
