added some final changes to the website.

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -18,8 +18,8 @@
   <section>
     <h1>Features</h1>
     <p>
-      In this application you will have the ability to keep track of the runs you have done
-      and give mood update once it's done.
+      In this application you will have the ability to keep track of the runs you have done,
+      by attaching a date and how many Kilometers you ran as well!
     </p>
   </section>
 </div>
