--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <mat-sidenav-container>
-  <mat-sidenav #sidenav role="navigation">
+  <mat-sidenav #sidenav role="navigation" fxLayout="column" fxLayoutAlign="center center">
     <mat-nav-list>
       <a mat-list-item [routerLink]="['/run']" (click)="sidenav.close()" *ngIf="isAuth">
-        <mat-icon>directions_run</mat-icon>
+        <mat-icon class="nav-items">directions_run</mat-icon>
         <span class="nav-text">Runs</span>
       </a>
-      <mat-list-item>
-        <button mat-icon-button (click)="onLogoutSideNav()" (click)="sidenav.close()"  *ngIf="isAuth">
-          <mat-icon>eject</mat-icon>
+      <mat-list-item fxLayoutAlign="center" >
+        <button mat-icon-button (click)="onLogoutSideNav()" (click)="sidenav.close()" *ngIf="isAuth">
+          <mat-icon class="nav-items">eject</mat-icon>
           <span class="nav-text">Logout</span>
         </button>
       </mat-list-item>
